--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,4 +1,4 @@
-## Mouse options 
+# Mouse options 
 set -g mouse on
 #bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 #bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
