--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -33,7 +33,7 @@ bindsym $mod+Return exec PAN_MESA_DEBUG=gl3 alacritty -e tmux
 bindsym $mod+Shift+q kill
 
 # start program launcher
-bindsym $mod+d exec --no-startup-id dmenu_recency
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
