i3wm: Ensure title bars go bye bye

--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -183,6 +183,9 @@ bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 # assign [class="Pcmanfm"] $ws3
 # assign [class="Skype"] $ws5
 
+# Foce no header, because for some reason its not working
+for_window [class="^.*"] border pixel 1
+
 # Open specific applications in floating mode
 for_window [title="alsamixer"] floating enable border pixel 1
 for_window [class="calamares"] floating enable border normal
