Add github to known hosts
cd to right dir

--- a/.builds/gh-sync.yml
+++ b/.builds/gh-sync.yml
@@ -5,5 +5,7 @@ sources:
 - https://git.sr.ht/~wrmilling/dotfiles
 tasks:
 - push: |
+    ssh-keyscan -H github.com >> ~/.ssh/known_hosts
+    cd dotfiles
     git remote add github git@github.com:wrmilling/dotfiles.git
     git push github main
