i3wm: move to rofi

--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -33,7 +33,9 @@ bindsym $mod+Return exec PAN_MESA_DEBUG=gl3 alacritty -e tmux
 bindsym $mod+Shift+q kill
 
 # start program launcher
-bindsym $mod+space exec --no-startup-id i3-dmenu-desktop
+# bindsym $mod+space exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+space exec --no-startup-id rofi -show drun
+bindsym $mod+Tab exec --no-startup-id rofi -show window
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
