Alacritty: Add delay for zellij start
Bug in i3wm + alacritty + zellij
https://github.com/zellij-org/zellij/issues/2126

--- a/private_dot_config/i3/config
+++ b/private_dot_config/i3/config
@@ -27,7 +27,7 @@ font xft:URWGothic-Book 11
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec PAN_MESA_DEBUG=gl3 alacritty -e tmux
+bindsym $mod+Return exec PAN_MESA_DEBUG=gl3 alacritty 
 
 # kill focused window
 bindsym $mod+Shift+q kill
