--- a/.builds/repo-sync.yml
+++ b/.builds/repo-sync.yml
@@ -14,7 +14,7 @@ tasks:
     git remote add github git@github.com:wrmilling/dotfiles.git
     git push github main
 
-    # Push copy of code to GitHub
-    ssh-keyscan -H github.com >> ~/.ssh/known_hosts
-    git remote add github git@github.com:wrmilling/dotfiles.git
-    git push github main
+    # Push copy of code to Codeberg
+    ssh-keyscan -H codeberg.org >> ~/.ssh/known_hosts
+    git remote add codeberg git@codeberg.org:wrmilling/dotfiles.git
+    git push codeberg main
